--- a/package.json
+++ b/package.json
@@ -11,9 +11,14 @@
   "dependencies": {
     "@clerk/nextjs": "^4.21.8",
     "@clerk/themes": "^1.7.5",
+    "@radix-ui/react-icons": "^1.3.1",
+    "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-tabs": "^1.1.1",
     "@vercel/analytics": "^1.3.1",
     "@vercel/speed-insights": "^1.0.12",
     "autoprefixer": "10.4.14",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
     "eslint-config-next": "^14.2.15",
     "framer-motion": "^11.11.4",
     "lucide-react": "^0.454.0",
@@ -27,6 +32,8 @@
     "react-toastify": "^10.0.6",
     "sharp": "^0.33.5",
     "svix": "^1.37.0",
-    "tailwindcss": "3.3.2"
+    "tailwind-merge": "^2.5.4",
+    "tailwindcss": "3.3.2",
+    "tailwindcss-animate": "^1.0.7"
   }
 }
