--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "clsx": "^2.1.1",
     "eslint-config-next": "^14.2.15",
     "framer-motion": "^11.11.4",
+    "groq-sdk": "^0.7.0",
     "lucide-react": "^0.454.0",
     "mongoose": "^8.7.1",
     "nanoid": "^5.0.7",
