--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
+    "react-markdown": "^9.0.1",
     "react-toastify": "^10.0.6",
+    "remark-gfm": "^4.0.0",
     "sharp": "^0.33.5",
     "svix": "^1.37.0",
     "tailwind-merge": "^2.5.4",
