--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/react": "^3.1.0",
     "@clerk/nextjs": "^4.21.8",
     "@clerk/themes": "^1.7.5",
     "@monaco-editor/react": "^4.6.0",
