--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "eslint-config-next": "^14.2.15",
     "framer-motion": "^11.11.4",
     "groq-sdk": "^0.7.0",
+    "js-cookie": "^3.0.5",
     "lucide-react": "^0.454.0",
     "mongoose": "^8.7.1",
     "nanoid": "^5.0.7",
