--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "eslint-config-next": "^14.2.15",
     "framer-motion": "^11.11.4",
     "groq-sdk": "^0.7.0",
