--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@monaco-editor/react": "^4.6.0",
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-icons": "^1.3.1",
+    "@radix-ui/react-progress": "^1.1.1",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.1",
     "@vercel/analytics": "^1.3.1",
