--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "@chakra-ui/react": "^3.1.0",
     "@clerk/nextjs": "^4.21.8",
     "@clerk/themes": "^1.7.5",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
     "@monaco-editor/react": "^4.6.0",
+    "@mui/material": "^6.2.0",
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-icons": "^1.3.1",
     "@radix-ui/react-progress": "^1.1.1",
