Playground Moved to pusher

--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
     "nanoid": "^5.0.7",
     "next": "^14.2.15",
     "postcss": "8.4.24",
+    "pusher": "^5.2.0",
+    "pusher-js": "^8.4.0-rc2",
     "react": "^18.3.1",
     "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.3.1",
@@ -48,8 +50,6 @@
     "react-toastify": "^10.0.6",
     "remark-gfm": "^4.0.0",
     "sharp": "^0.33.5",
-    "socket.io": "^4.8.1",
-    "socket.io-client": "^4.8.1",
     "svix": "^1.37.0",
     "tailwind-merge": "^2.5.4",
     "tailwindcss": "3.3.2",
