--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "eslint-config-next": "^14.2.15",
     "framer-motion": "^11.11.4",
     "groq-sdk": "^0.7.0",
+    "intro.js": "^7.2.0",
+    "intro.js-react": "^1.0.0",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.454.0",
     "mongoose": "^8.7.1",
@@ -46,6 +48,7 @@
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
+    "react-joyride": "^2.9.3",
     "react-markdown": "^9.0.1",
     "react-toastify": "^10.0.6",
     "remark-gfm": "^4.0.0",
