--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "eslint-config-next": "^14.2.15",
     "framer-motion": "^11.11.4",
     "groq-sdk": "^0.7.0",
+    "howler": "^2.2.4",
     "intro.js": "^7.2.0",
     "intro.js-react": "^1.0.0",
     "js-cookie": "^3.0.5",
@@ -45,6 +46,7 @@
     "pusher-js": "^8.4.0-rc2",
     "react": "^18.3.1",
     "react-circular-progressbar": "^2.1.0",
+    "react-confetti": "^6.2.2",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
@@ -57,6 +59,7 @@
     "tailwind-merge": "^2.5.4",
     "tailwindcss": "3.3.2",
     "tailwindcss-animate": "^1.0.7",
+    "use-sound": "^4.0.3",
     "uuid": "^11.0.2"
   }
 }
